--- a/index.html
+++ b/index.html
@@ -2,4 +2,7 @@
 <html lang="ru">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>ALPIX - Комплектация интерьеров</title>
+<style>
+body { font-family: -apple-system, sans-serif; max-width: 1200px
